[package]
name = "actix-tools"
version = "0.1.0"
authors = ["Loggi Tecnologia LTDA <dev@loggi.com>", "Gabriela Surita <gabsurita@gmail.com>"]
description = "Provide Plug&Play components for Actix and Actix-web to build modular, 12-factor compliant apps."
license = "MIT"

[dependencies]
actix = { version = "0.7", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
config = { version = "0.8", optional = true }
diesel = { version = "1.3", optional = true, features = ["r2d2", "postgres"] }
env_logger = { version = "0.5", optional = true }
influx_db_client = { version = "0.3", optional = true }
log = "0.4"
num_cpus = { version = "1.8" }
rumqtt = { version = "0.10.1", optional = true }
redis = { version = "0.8", optional = true }
r2d2 = { version = "0.8", optional = true }
r2d2_redis = { version = "0.7", optional = true }
sentry = { version = "0.6", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"


[features]
default = [
    "json_logs",
    "sentry",
    "config",
]

json_logs = ["env_logger", "chrono"]
diesel_actors = ["actix", "r2d2", "diesel"]
influx_actors = ["actix", "influx_db_client"]
mqtt_actors = ["actix", "rumqtt"]
redis_actors = ["actix", "r2d2", "r2d2_redis", "redis"]
